--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/5a740087a2.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="3DMark Icon.png" type="image/x-icon">
 </head>
 
 <body>
