Created better alert system

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         3DMark Score Calculator
     </header>
 
+    <div id="alertBox" data-active="false"><i class="fa-solid fa-triangle-exclamation"></i> <span id="alertMessage"></span></div>
+
     <div class="contentWrapper">
         <form id="form">
             <table>
