--- a/3dmark_calculator.html
+++ b/3dmark_calculator.html
@@ -6,6 +6,7 @@
     <title>PCBS 3DMark Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="3dmark_calculator.js"></script>
+    <script src="global.js"></script>
     <script src="https://kit.fontawesome.com/5a740087a2.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="3DMark Icon.png" type="image/x-icon">
 </head>
@@ -17,7 +18,7 @@
         <i class="fa-solid fa-chart-line"></i>
         3DMark Score Calculator
         <div class="menuItems">
-            <a href="./achievement-guide.html"><i class="fa-solid fa-trophy"></i> Achievements</a>
+            <a href="./achievement_guide.html"><i class="fa-solid fa-trophy"></i> Achievements</a>
         </div>
     </header>
 
