--- a/developer_mode.html
+++ b/developer_mode.html
@@ -5,23 +5,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>PCBS Achivement Guide</title>
     <link rel="stylesheet" href="style.css">
-    <script src="achievement_guide.js"></script>
+    <script src="developer_mode.js"></script>
+	<script src="global.js"></script>
     <script src="https://kit.fontawesome.com/5a740087a2.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="3DMark Icon.png" type="image/x-icon">
 </head>
 <body>
 	<header>
-		<i class="fa-solid fa-trophy"></i> 
-		Achievements
+		<i class="fa-solid fa-terminal"></i>
+		Developer Mode
 		<div class="menuItems">
-			<a href="./index.html"><i class="fa-solid fa-chart-line"></i> 3DMark Score Calculator</a>
+			<a href="./3dmark_calculator.html"><i class="fa-solid fa-chart-line"></i> 3DMark Score Calculator</a>
+			<a href="./achievement_guide.html"><i class="fa-solid fa-trophy"></i> Achievements</a>
 		</div>
     </header>
 
     <div id="alertBox" data-active="false"><i class="fa-solid fa-triangle-exclamation"></i> <span id="alertMessage"></span></div>
-	
-	<div id="achievementWrapper">
-		<h2>PC Building Simulator 2</h2>
+
+	<div class="contentWrapper">
+		<h2>Local Storage</h2>
+		<button onclick="del()">Delete local storage</button>
+		<button onclick="add()">Mark random achievement as completed</button>
+		<button onclick="prn()">Print local storage to console</button>
 	</div>
 </body>
 </html>
