Cleaned up dev-mode page

--- a/achievement_guide.html
+++ b/achievement_guide.html
@@ -24,7 +24,7 @@
 		<h2>PC Building Simulator 2</h2>
 	</div>
 
-	<button onclick="del()">Delete local storage</button>
+	<button class="dangerous" onclick="del()">Delete local storage</button>
 	<button onclick="add()">Mark random achievement as completed</button>
 	<button onclick="prn()">Print local storage to console</button>
 </body>
