Removed dev buttons form ach.guide

--- a/developer_mode.html
+++ b/developer_mode.html
@@ -28,7 +28,7 @@
 		<button onclick="showAlert('Test alert')">Show test alert</button>
 
 		<h2>Local Storage</h2>
-		<button onclick="del()">Delete local storage</button>
+		<button class="dangerous" onclick="del()">Delete local storage</button>
 		<button onclick="add()">Mark random achievement as completed</button>
 		<button onclick="prn()">Print local storage to console</button>
 
