Impl. achievement groups for future-proofing

--- a/achievement_guide.html
+++ b/achievement_guide.html
@@ -22,6 +22,7 @@
 	
 	<div id="achievementWrapper">
 		<h2>PC Building Simulator 2</h2>
+		<div id="pcbs2-achievements"></div>
 	</div>
 </body>
 </html>
