Created progress trackers

--- a/achievement_guide.html
+++ b/achievement_guide.html
@@ -21,7 +21,8 @@
     <div id="alertBox" data-active="false"><i class="fa-solid fa-triangle-exclamation"></i> <span id="alertMessage"></span></div>
 	
 	<div id="achievementWrapper">
-		<h2>PC Building Simulator 2</h2>
+		<h2 class="no-bottom-margin">PC Building Simulator 2</h2>
+		<div class="gray"><span id="pcbs2-completion">0</span>% complete | <span id="pcbs2-xp">0</span> XP</div>
 		<div id="pcbs2-achievements"></div>
 	</div>
 </body>
