Added exact tracker

--- a/achievement_guide.html
+++ b/achievement_guide.html
@@ -22,7 +22,11 @@
 	
 	<div id="achievementWrapper">
 		<h2 class="no-bottom-margin">PC Building Simulator 2</h2>
-		<div class="gray"><span id="pcbs2-completion">0</span>% complete | <span id="pcbs2-xp">0</span> XP</div>
+		<div class="gray">
+			<span id="pcbs2-completion">0</span>% complete
+			 (<span id="pcbs2-completed">0</span> of <span id="pcbs2-total">0</span>)
+			 | <span id="pcbs2-xp">0</span> XP
+		</div>
 		<div id="pcbs2-achievements"></div>
 	</div>
 </body>
