It's not bad if I remove the comments!

--- a/3dmark_calculator.html
+++ b/3dmark_calculator.html
@@ -19,6 +19,7 @@
         3DMark Score Calculator
         <div class="menuItems">
             <a href="./achievement_guide.html"><i class="fa-solid fa-trophy"></i> Achievements</a>
+            <a href="./achievement_guide.html"><i class="fa-solid fa-computer"></i> Build Specs</a>
         </div>
     </header>
 
@@ -75,7 +76,6 @@
         </form>
 
         <table>
-            <!-- score overview, completely replace this garbage 1998 code -->
             <section>
                 <th></th>
                 <tr>
@@ -152,7 +152,6 @@
                     <td id="systemWatts"></td>
                 </tr>
             </section>
-            <!-- you made it to the end! 🥳 -->
         </table>
     </div>
 </body>
