Added menu bar items for `Build Specs`

--- a/3dmark_calculator.html
+++ b/3dmark_calculator.html
@@ -19,7 +19,7 @@
         3DMark Score Calculator
         <div class="menuItems">
             <a href="./achievement_guide.html"><i class="fa-solid fa-trophy"></i> Achievements</a>
-            <a href="./achievement_guide.html"><i class="fa-solid fa-computer"></i> Build Specs</a>
+            <a href="./build_specs.html"><i class="fa-solid fa-computer"></i> Build Specs</a>
         </div>
     </header>
 
