--- a/achievement_guide.html
+++ b/achievement_guide.html
@@ -15,6 +15,7 @@
 		<i class="fa-solid fa-trophy"></i> Achievements
 		<div class="menuItems">
 			<a href="./3dmark_calculator.html"><i class="fa-solid fa-chart-line"></i> 3DMark Score Calculator</a>
+			<a href="./build_specs.html"><i class="fa-solid fa-computer"></i> Build Specs</a>
 		</div>
     </header>
 
