--- a/3dmark_calculator.html
+++ b/3dmark_calculator.html
@@ -27,132 +27,58 @@
 
     <div class="contentWrapper">
         <form id="form">
-            <table>
-                <th></th>
-                <tr>
-                    <td><i class="fa-solid fa-microchip"></i> CPU</td>
-                    <td>
-                        <input name="cpu" list="cpuList">
-                    </td>
-                </tr>
-                <tr>
-                    <td><i class="fa-solid fa-memory"></i> RAM Speed</td>
-                    <td>
-                        <select name="ramSpeed">
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td><i class="fa-solid fa-memory"></i> RAM Channels</td>
-                    <td>
-                        <select name="ramChannels">
-                            <option value="1">1: Single-channel</option>
-                            <option value="2">2: Dual-channel</option>
-                            <option value="3">3: Triple-channel</option>
-                            <option value="4">4: Quad-channel</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td><i class="fa-solid fa-display"></i> GPU</td>
-                    <td><input name="gpu" list="gpuList"></td>
-                </tr>
-                <tr>
-                    <td><i class="fa-solid fa-display"></i> # GPUs</td>
-                    <td>
-                        <select name="gpuCount">
-                            <option value="1" selected>1: Single-GPU</option>
-                            <option value="2">2: Dual-GPUs</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>
-                        <button type="button" id="calculate" onclick="calculateScore()">Calculate</button>
-                    </td>
-                </tr>
-            </table>
+            <div class="score-input-wrapper">
+                <span><i class="fa-solid fa-microchip"></i> CPU</span>
+                <input name="cpu" list="cpuList">
+
+                <span><i class="fa-solid fa-memory"></i> RAM Speed</span>
+                <select name="ramSpeed"></select>
+
+                <span><i class="fa-solid fa-memory"></i> RAM Channels</span>
+                <select name="ramChannels">
+                    <option value="1">1: Single-channel</option>
+                    <option value="2">2: Dual-channel</option>
+                    <option value="3">3: Triple-channel</option>
+                    <option value="4">4: Quad-channel</option>
+                </select>
+
+                <span><i class="fa-solid fa-display"></i> GPU</span>
+                <input name="gpu" list="gpuList">
+
+                <span><i class="fa-solid fa-display"></i> # GPUs</span>
+                <select name="gpuCount">
+                    <option value="1" selected>1: Single-GPU</option>
+                    <option value="2">2: Dual-GPUs</option>
+                </select>
+
+                <button type="button" id="calculate" onclick="calculateScore()">Calculate</button>
+            </div>
         </form>
 
-        <table>
-            <section>
-                <th></th>
-                <tr>
-                    <td style="font-weight:bold; font-size:20px">3DMark Score</td>
-                    <td style="font-weight:bold; font-size:20px" id="systemScore"></td>
-                </tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr>
-                    <td><i class="fa-solid fa-microchip"></i> CPU Score</td>
-                    <td id="cpuScore"></td>
-                </tr>
-                <tr>
-                    <td><i class="fa-solid fa-display"></i> GPU Score</td>
-                    <td id="gpuScore"></td>
-                </tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr>
-                <tr>
-                    <td><i class="fa-solid fa-tags"></i> CPU Price New</td>
-                    <td id="cpuPriceNew"></td>
-                </tr>
-                <tr>
-                    <td><i class="fa-solid fa-tag"></i> CPU Price Used</td>
-                    <td id="cpuPriceUsed"></td>
-                </tr>
-                <tr>
-                    <td><i class="fa-solid fa-tags"></i> GPU(s) Price New</td>
-                    <td id="gpuPriceNew"></td>
-                </tr>
-                <tr>
-                    <td><i class="fa-solid fa-tag"></i> GPU(s) Price Used</td>
-                    <td id="gpuPriceUsed"></td>
-                </tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr>
-                    <td><i class="fa-regular fa-snowflake"></i> GPU Cooling</td>
-                    <td id="gpuCooling"></td>
-                </tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr>
-                    <td><i class="fa-solid fa-bolt"></i> System Watts</td>
-                    <td id="systemWatts"></td>
-                </tr>
-            </section>
-        </table>
+        <div class="score-output-wrapper">
+            <span style="font-weight:bold; font-size:20px">3DMark Score</span>
+            <span style="font-weight:bold; font-size:20px" id="systemScore"></span>
+
+            <span><i class="fa-solid fa-microchip"></i> CPU Score</span>
+            <span id="cpuScore"></span>
+            <span><i class="fa-solid fa-display"></i> GPU Score</span>
+            <span id="gpuScore"></span>
+
+            <span><i class="fa-solid fa-tags"></i> CPU Price New</span>
+            <span id="cpuPriceNew"></span>
+            <span><i class="fa-solid fa-tag"></i> CPU Price Used</span>
+            <span id="cpuPriceUsed"></span>
+            <span><i class="fa-solid fa-tags"></i> GPU(s) Price New</span>
+            <span id="gpuPriceNew"></span>
+            <span><i class="fa-solid fa-tag"></i> GPU(s) Price Used</span>
+            <span id="gpuPriceUsed"></span>
+
+            <span><i class="fa-regular fa-snowflake"></i> GPU Cooling</span>
+            <span id="gpuCooling"></span>
+
+            <span><i class="fa-solid fa-bolt"></i> System Watts</span>
+            <span id="systemWatts"></span>
+        </div>
     </div>
 </body>
 </html>
