--- a/3dmark_calculator.html
+++ b/3dmark_calculator.html
@@ -42,7 +42,7 @@
                     <option value="4">4: Quad-channel</option>
                 </select>
 
-                <span><i class="fa-solid fa-display"></i> GPU</span>
+                <span><i class="fa-solid fa-display"></i> GPU(s)</span>
                 <input name="gpu" list="gpuList">
 
                 <span><i class="fa-solid fa-display"></i> # GPUs</span>
