--- a/build_specs.html
+++ b/build_specs.html
@@ -14,6 +14,10 @@
 <body>
     <datalist id="cpuList"></datalist>
     <datalist id="gpuList"></datalist>
+    <datalist id="motherboardList"></datalist>
+    <datalist id="dimmList"></datalist>
+    <datalist id="storageDriveList"></datalist>
+    <datalist id="caseList"></datalist>
 
     <header>
         <i class="fa-solid fa-computer"></i> Build Specs
@@ -27,7 +31,7 @@
 
     <div class="contentWrapper">
         <form id="form">
-            <div class="spec-input-wrapper">
+            <div class="score-input-wrapper">
                 <span class="bold">Components</span>
                 <span></span>
 
@@ -46,8 +50,7 @@
                     <option value="2">2: Dual-GPUs</option>
                 </select>
 
-
-                <span class="bold">Memory</span>
+                <span class="bold" style="margin-top: 1rem">Memory</span>
                 <span></span>
 
                 <span><i class="fa-solid fa-display"></i> DIMM 1</span>
@@ -62,21 +65,24 @@
                 <span><i class="fa-solid fa-display"></i> DIMM 4</span>
                 <input name="dimm1" list="dimmList">
 
+                <span><i class="fa-solid fa-display"></i> RAM Speed</span>
+                <select name="ramSpeed" id="ramSpeed"></select>
 
-                <span class="bold">Storage</span>
-                <span></span>
+
+                <span class="bold" style="margin-top: 1rem">Storage</span>
+                <button id="add-drive-button" onclick="addDrive()"><i class="fa-solid fa-plus"></i></button>
 
                 <span><i class="fa-solid fa-display"></i> Drive</span>
-                <input name="storage1" list="storageMediumList">
+                <input name="storage1" list="storageDriveList">
 
 
-                <span class="bold">Exterior</span>
+                <span class="bold" style="margin-top: 1rem">Exterior</span>
                 <span></span>
 
                 <span><i class="fa-solid fa-microchip"></i> Case</span>
                 <input name="case" list="caseList">
 
-                <button type="button" id="calculate" onclick="calculateScore()">Calculate</button>
+                <button type="button" id="calculate" style="margin-top: 2rem" onclick="calculateSpecs()">Calculate</button>
             </div>
         </form>
 
