--- a/build_specs.html
+++ b/build_specs.html
@@ -53,33 +53,33 @@
                 <span class="bold" style="margin-top: 1rem">Memory</span>
                 <span></span>
 
-                <span><i class="fa-solid fa-display"></i> DIMM 1</span>
+                <span><i class="fa-solid fa-memory"></i> DIMM 1</span>
                 <input name="dimm1" list="dimmList">
 
-                <span><i class="fa-solid fa-display"></i> DIMM 2</span>
+                <span><i class="fa-solid fa-memory"></i> DIMM 2</span>
                 <input name="dimm1" list="dimmList">
                 
-                <span><i class="fa-solid fa-display"></i> DIMM 3</span>
+                <span><i class="fa-solid fa-memory"></i> DIMM 3</span>
                 <input name="dimm1" list="dimmList">
 
-                <span><i class="fa-solid fa-display"></i> DIMM 4</span>
+                <span><i class="fa-solid fa-memory"></i> DIMM 4</span>
                 <input name="dimm1" list="dimmList">
 
-                <span><i class="fa-solid fa-display"></i> RAM Speed</span>
+                <span><i class="fa-solid fa-gauge-high"></i> RAM Speed</span>
                 <select name="ramSpeed" id="ramSpeed"></select>
 
 
                 <span class="bold" style="margin-top: 1rem">Storage</span>
-                <button id="add-drive-button" onclick="addDrive()"><i class="fa-solid fa-plus"></i></button>
+                <button type="button" id="add-drive-button" onclick="addDrive()"><i class="fa-solid fa-plus"></i></button>
 
-                <span><i class="fa-solid fa-display"></i> Drive</span>
+                <span><i class="fa-solid fa-hard-drive"></i> Drive</span>
                 <input name="storage1" list="storageDriveList">
 
 
                 <span class="bold" style="margin-top: 1rem">Exterior</span>
                 <span></span>
 
-                <span><i class="fa-solid fa-microchip"></i> Case</span>
+                <span><i class="fa-solid fa-database"></i> Case</span>
                 <input name="case" list="caseList">
 
                 <button type="button" id="calculate" style="margin-top: 2rem" onclick="calculateSpecs()">Calculate</button>
