--- a/build_specs.html
+++ b/build_specs.html
@@ -53,16 +53,16 @@
                 <span class="bold" style="margin-top: 1rem">Memory</span>
                 <span></span>
 
-                <span><i class="fa-solid fa-memory"></i> DIMM 1</span>
+                <span><i class="fa-solid fa-memory"></i> DIMM #1</span>
                 <input name="dimm1" list="dimmList">
 
-                <span><i class="fa-solid fa-memory"></i> DIMM 2</span>
+                <span><i class="fa-solid fa-memory"></i> DIMM #2</span>
                 <input name="dimm2" list="dimmList">
                 
-                <span><i class="fa-solid fa-memory"></i> DIMM 3</span>
+                <span><i class="fa-solid fa-memory"></i> DIMM #3</span>
                 <input name="dimm3" list="dimmList">
 
-                <span><i class="fa-solid fa-memory"></i> DIMM 4</span>
+                <span><i class="fa-solid fa-memory"></i> DIMM #4</span>
                 <input name="dimm4" list="dimmList">
 
                 <span><i class="fa-solid fa-gauge-high"></i> RAM Speed</span>
