--- a/build_specs.html
+++ b/build_specs.html
@@ -92,8 +92,8 @@
         </form>
 
         <div class="score-output-wrapper">
-            <span class="bold">3DMark Score</span>
-            <span class="bold" id="systemScore"></span>
+            <span class="bold">Specifications</span>
+            <span></span>
 
             <span><i class="fa-solid fa-microchip"></i> CPU Score</span>
             <span id="cpuScore"></span>
