Renamed `case` to `computerCase` to avoid conflict

--- a/build_specs.html
+++ b/build_specs.html
@@ -85,7 +85,7 @@
                 <span></span>
 
                 <span><i class="fa-solid fa-database"></i> Case</span>
-                <input name="case" list="caseList">
+                <input name="computerCase" list="caseList">
 
                 <button type="button" id="calculate" style="margin-top: 2rem" onclick="calculateSpecs()">Calculate</button>
             </div>
