Added tri/quad gpu

--- a/build_specs.html
+++ b/build_specs.html
@@ -48,6 +48,8 @@
                 <select name="gpuCount">
                     <option value="1" selected>1: Single-GPU</option>
                     <option value="2">2: Dual-GPUs</option>
+                    <option value="3">3: Triple-GPUs</option>
+                    <option value="4">4: Quad-GPUs</option>
                 </select>
 
                 <span class="bold" style="margin-top: 1rem">Memory</span>
