Started loading spec sheet

--- a/build_specs.html
+++ b/build_specs.html
@@ -100,7 +100,7 @@
             <span><i class="fa-solid fa-microchip"></i> Socket</span>
             <span id="cpuSocket"></span>
             <span><i class="fa-solid fa-wave-square"></i> Frequency</span>
-            <span id="cpuSocket"></span>
+            <span id="cpuFrequency"></span>
             <span><i class="fa-solid fa-gauge-high"></i> Default RAM Speed</span>
             <span id="cpuDefaultMemorySpeed"></span>
             <span><i class="fa-solid fa-memory"></i> Max RAM Channels</span>
