Loaded GPU spec sheet

--- a/build_specs.html
+++ b/build_specs.html
@@ -130,7 +130,7 @@
             <span><i class="fa-solid fa-memory"></i> VRAM</span>
             <span id="gpuVram"></span>
             <span><i class="fa-solid fa-ruler-combined"></i> Slot Size</span>
-            <span id="gpuVram"></span>
+            <span id="gpuSlotSize"></span>
             <span><i class="fa-solid fa-microchip"></i> Multi-GPU</span>
             <span id="gpuMultiGpu"></span>
             <span><i class="fa-solid fa-bolt"></i> Wattage</span>
